# operations-research-two-tsp

./: .devcontainer.json  .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh  chrono.c  concurrent_profiler.sh  config.ini  config.ini.example  install-pip-deps.sh  main.c  profiler.sh  requirements.txt  tree_cat.py  tree_cat.sh  tsp_utilities.c
cflaglib/: CMakeLists.txt
cflaglib/include/: flag_parser.h  parsing_result.h  parsing_util.h
cflaglib/src/: flag_parser.c  parsing_result.c  parsing_util.c
cflaglib/tests/: CMakeLists.txt  test_parser.c
cli_lib/: CMakeLists.txt
cli_lib/include/: cmd_options.h  flag.h  flag_parser.h  parsing_result.h  parsing_util.h
cli_lib/src/: flag.c  flag_parser.c  parsing_result.c  parsing_util.c
cli_lib/tests/: CMakeLists.txt  flag_parser_test.c  parse_flag_test.c
cmake/: FindCPLEX.cmake  ProjectOptions.cmake
common/: CMakeLists.txt
common/include/: c_util.h  chrono.h  constants.h  hashmap.h  ini.h  logger.h  random.h  uthash.h
common/src/: c_util.c  chrono.c  hashmap.c  ini.c  logger.c  random.c
common/tests/: CMakeLists.txt  str_format_test.c
constants/: constants.h
include/: c_util.h  cmd_options.h  constants.h  enums.h  parsing_util.h  tsp_instance.h  tsp_params.h  tsp_solution.h
parsing/: parsing_util.c  parsing_util.h
profiler/: analyzer.sh  config.json  experiments.json  profiler.py  profiler.sh
report/: .gitignore  bibliography.bib  docker-compose.yml  proceedings.bib  report.tex  run.sh
tsp_algo_lib/: CMakeLists.txt
tsp_algo_lib/include/: algorithm_constants.h  algorithms.h  feasibility_result.h  math_util.h  time_limiter.h  tsp_algorithm.h  tsp_instance.h  tsp_math_util.h  tsp_solution.h
tsp_algo_lib/include/algorithms/: algorithms.h  benders_loop.h  branch_and_cut.h  extra_mileage.h  genetic.h  grasp.h  hard_fixing.h  local_branching.h  nearest_neighbor.h  tabu_search.h  variable_neighborhood_search.h
tsp_algo_lib/include/algorithms/common/: constructive.h
tsp_algo_lib/include/algorithms/exact/: benders_loop.h  cplex_solver_wrapper.h  matheuristic_utils.h
tsp_algo_lib/include/algorithms/heuristic/: constructive.h  heuristic_types.h  local_search.h
tsp_algo_lib/include/api/: algorithms.h  feasibility_result.h  time_limiter.h  tsp_algorithm.h  tsp_instance.h  tsp_math_util.h  tsp_solution.h
tsp_algo_lib/include/exact/: branch_and_cut.h  cplex_solver_wrapper.h  subtour_separator.h
tsp_algo_lib/include/parser/: tsp_parser.h  tsp_parser_tsplib.h  tsp_parser_utils.h
tsp_algo_lib/include/parser/instance/: tsp_parser_instance.h
tsp_algo_lib/include/parser/solution/: tsp_parser_solution.h
tsp_algo_lib/include/plotting/: costs_plotter.h
tsp_algo_lib/include/utility/: cost_recorder.h  feasibility_result.h  time_limiter.h  tsp_error.h  tsp_math.h  tsp_tour.h
tsp_algo_lib/src/: algorithms.c  feasibility_result.c  math_util.c  time_limiter.c  tsp_instance.c  tsp_math_util.c  tsp_solution.c
tsp_algo_lib/src/algorithm/: algorithms.c  benders_loop.c  branch_and_cut.c  extra_mileage.c  genetic.c  grasp.c  hard_fixing.c  local_branching.c  nearest_neighbor.c  tabu_search.c  variable_neighborhood_search.c
tsp_algo_lib/src/algorithm/common/: constructive.c
tsp_algo_lib/src/algorithm/exact/: cplex_solver_wrapper.c  matheuristic_utils.c  subtour_separator.c
tsp_algo_lib/src/algorithm/heuristic/: constructive.c  local_search.c
tsp_algo_lib/src/api/: algorithms.c  feasibility_result.c  time_limiter.c  tsp_algorithm.c  tsp_instance.c  tsp_math_util.c  tsp_solution.c
tsp_algo_lib/src/exact/: benders_loop.c  branch_and_cut.c  cplex_solver_wrapper.c
tsp_algo_lib/src/parser/: tsp_parser.c  tsp_parser_tsplib.c
tsp_algo_lib/src/parser/instance/: tsp_parser_tsplib.c
tsp_algo_lib/src/parser/solution/: tsp_parser_sol_v1.c
tsp_algo_lib/src/utility/: cost_recorder.c  feasibility_result.c  time_limiter.c  tsp_error.c  tsp_math.c  tsp_tour.c
tsp_algo_lib/tests/: CMakeLists.txt  grasp_nearest_neighbor_test.c  grasp_test.c  n_opt_test.c  nearest_neighbor_test.c
tsp_algo_lib/tests/include/: em_test.h  exact_test.h  genetic_test.h  grasp_nn_helpers_test.h  grasp_test.h  hard_fixing_test.h  local_branching_test.h  local_search_test.h  n_opt_test.h  nn_test.h  parser_test.h  subtour_separator_test.h  test_instances.h  ts_test.h  utility_test.h  vns_test.h
tsp_algo_lib/tests/src/: em_test.c  exact_test.c  genetic_test.c  grasp_nn_helpers_test.c  grasp_test.c  hard_fixing_test.c  local_branching_test.c  local_search_test.c  main.c  n_opt_test.c  nn_test.c  parser_test.c  subtour_separator_test.c  ts_test.c  utility_test.c  vns_test.c
tsp_algo_lib/tests/src/components/: local_search_test.c  n_opt_test.c  subtour_separator_test.c
tsp_algo_lib/tests/src/exacts/: exact_test.c  hard_fixing_test.c  local_branching_test.c
tsp_algo_lib/tests/src/heuristics/: em_test.c  genetic_test.c  grasp_test.c  nn_test.c  ts_test.c  vns_test.c
tsp_algo_lib/tests/src/infrastructure/: grasp_nn_helpers_test.c  parser_test.c  utility_test.c
tsp_solver/: CMakeLists.txt
tsp_solver/include/: algorithm_plotter.h  algorithm_runner.h  cmd_options.h  constants.h  plot_util.h
tsp_solver/include/algorithms/: algorithms.h  extended_algorithm.h  extended_algorithms.h  grasp.h  nearest_neighbor.h  tabu_search.h  variable_neighborhood_search.h
tsp_solver/include/cmd_option/: cmd_option_internal.h  cmd_options.h
tsp_solver/include/plotting/: costs_plotter.h  plot_util.h
tsp_solver/include/util/: costs_plotter.h  math_util.h  plot_util.h
tsp_solver/src/: algorithm_runner.c  cmd_options.c  costs_plotter.c  main.c  nearest_neighbor.c  plot_util.c
tsp_solver/src/algorithm/: algorithm.c  algorithms.c  extended_algorithm.c  grasp.c  nearest_neighbor.c  tabu_search.c  variable_neighborhood_search.c
tsp_solver/src/cmd_option/: cmd_option_base.c  cmd_option_cli.c  cmd_option_ini.c  cmd_options.c
tsp_solver/src/plotting/: costs_plotter.c  plot_util.c
tsp_solver/src/util/: costs_plotter.c  parsing_util.c  plot_util.c
tsp_solver/tests/: CMakeLists.txt  n_opt_test.c  nearest_neighbor.c  nearest_neighbor_test.c
(+58 files in other folders)
